removed spaces on homepage, added margin to buttons to prevent overlap

--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -54,6 +54,7 @@
 	display: inline-block;
 	width: 200px;
 	padding: 8px;
+	margin: 7px;
 	color: #000;
     font-family: Raleway;
 	background-color: transparent;
